--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "jquery.offcanvas",
     "description": "jQuery offcanvas plugin",
-    "version": "1.0.0",
+    "version": "0.2",
     "homepage": "https://github.com/lgraubner/offcanvas",
     "license": "MIT",
     "devDependencies": {
@@ -11,6 +11,10 @@
         "gulp-header": "~1.2.2",
         "gulp-rename": "~1.2.0",
         "jshint-stylish": "~1.0.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/lgraubner/offcanvas.git"
     },
     "engines": {
         "node": ">=0.10.0"
