enhanced documentation, removed demo, updated dependencies

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
       "url": "https://github.com/lgraubner/jquery-offcanvas/issues"
   },
   "dependencies": {
-    "jquery": ">=1.9.0"
+    "jquery": ">=1.7.0"
   },
   "devDependencies": {
-    "gulp": "~3.9.0",
-    "gulp-uglify": "~1.2.0",
-    "gulp-header": "~1.2.2",
-    "gulp-rename": "~1.2.2",
-    "gulp-strip-debug": "~1.0.2",
-    "gulp-jshint": "~1.11.2",
-    "jshint-stylish": "~2.0.1"
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.4.1",
+    "gulp-header": "^1.7.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-jshint": "^1.11.2",
+    "gulp-strip-debug": "^1.0.2",
+    "jshint-stylish": "^2.0.1"
   },
   "license": "MIT"
 }
