--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-offcanvas",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Easy to use jQuery offcanvas plugin.",
   "author": "Lars Graubner <mail@larsgraubner.de>",
   "homepage": "https://github.com/lgraubner/jquery-offcanvas",
@@ -17,12 +17,15 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-uglify": "^1.4.1",
+    "gulp-uglify": "^1.4.2",
     "gulp-header": "^1.7.1",
     "gulp-rename": "^1.2.2",
     "gulp-jshint": "^1.11.2",
     "gulp-strip-debug": "^1.0.2",
-    "jshint-stylish": "^2.0.1"
+    "jshint-stylish": "^2.0.1",
+    "gulp-mocha-phantomjs": "^0.10.1",
+    "mocha": "^2.3.3",
+    "should": "^7.1.0"
   },
   "license": "MIT"
 }
