--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-offcanvas",
-  "version": "2.2.6",
+  "version": "3.0.0",
   "description": "Easy to use jQuery offcanvas plugin.",
   "author": {
       "name": "Lars Graubner",
@@ -35,8 +35,10 @@
     "gulp-header": "^1.7.1",
     "gulp-rename": "^1.2.2",
     "gulp-minify-css": "^1.2.1",
-    "gulp-jshint": "^1.11.2",
+    "gulp-jshint": "^1.12.0",
     "gulp-strip-debug": "^1.0.2",
+    "gulp-babel": "^6.1.0",
+    "babel-preset-es2015": "^6.1.2",
     "jshint-stylish": "^2.0.1",
     "gulp-mocha-phantomjs": "^0.10.1",
     "run-sequence": "^1.1.4",
