added npm keyword

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "canvas",
     "animation",
     "mobile",
-    "velocity"
+    "velocity",
+    "browser"
   ],
   "main": "dist/jquery.offcanvas.min.js",
   "repository": {
