--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "jquery-offcanvas",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Easy to use jQuery offcanvas plugin.",
   "author": {
-      "name": "Lars Graubner",
-      "email": "mail@larsgraubner.de",
-      "url": "http://larsgraubner.de"
+    "name": "Lars Graubner",
+    "email": "mail@larsgraubner.de",
+    "url": "http://larsgraubner.de"
   },
   "homepage": "http://lgraubner.github.io/jquery-offcanvas/",
   "keywords": [
@@ -31,24 +31,25 @@
     "velocity-animate": "^1.2.3"
   },
   "devDependencies": {
-    "gulp": "^3.9.0",
-    "gulp-uglify": "^1.5.1",
-    "gulp-header": "^1.7.1",
-    "gulp-rename": "^1.2.2",
-    "gulp-minify-css": "^1.2.1",
-    "gulp-jshint": "^1.12.0",
-    "gulp-strip-debug": "^1.1.0",
-    "gulp-babel": "^6.1.0",
     "babel-preset-es2015": "^6.1.18",
-    "jshint-stylish": "^2.0.1",
-    "gulp-mocha-phantomjs": "^0.10.1",
-    "run-sequence": "^1.1.4",
-    "mocha": "^2.3.4",
     "chai": "^3.4.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-header": "^1.7.1",
+    "gulp-jshint": "^2.0.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-mocha-phantomjs": "^0.10.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^1.5.1",
+    "jshint": "^2.9.1-rc1",
+    "jshint-stylish": "^2.1.0",
+    "mocha": "^2.3.4",
+    "run-sequence": "^1.1.5",
     "sinon": "^1.17.2"
   },
   "scripts": {
-      "test": "gulp test"
+    "test": "gulp test"
   },
   "license": "MIT"
 }
