--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.9.1-rc1",
+    "jshint": "^2.8.0",
     "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
     "run-sequence": "^1.1.5",
