--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jquery-offcanvas",
-  "version": "3.3.0",
+  "version": "3.4.0",
   "description": "Easy to use jQuery offcanvas plugin.",
   "author": {
     "name": "Lars Graubner",
@@ -26,24 +26,24 @@
   "bugs": {
     "url": "https://github.com/lgraubner/jquery-offcanvas/issues"
   },
+  "engines": {
+    "node": ">=4.0.0"
+  },
   "peerDependencies": {
     "jquery": ">=1.7.0",
     "velocity-animate": "^1.2.3"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
     "chai": "^3.4.1",
+    "eslint-config-airbnb": "^3.0.0",
     "gulp": "^3.9.0",
-    "gulp-babel": "^6.1.1",
+    "gulp-cssnano": "^2.1.0",
+    "gulp-eslint": "^1.1.1",
     "gulp-header": "^1.7.1",
-    "gulp-jshint": "^2.0.0",
-    "gulp-minify-css": "^1.2.2",
     "gulp-mocha-phantomjs": "^0.10.1",
     "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.1.0",
     "gulp-uglify": "^1.5.1",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.1.0",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2"
   },
