--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     "no-param-reassign": 0,
     "no-var": 0,
     "object-shorthand": 0,
-    "no-console": 0
+    "no-console": 0,
+    "strict": 0
   },
   "globals": {
     "define": false,
