--- a/package.json
+++ b/package.json
@@ -35,20 +35,26 @@
   },
   "devDependencies": {
     "chai": "^3.4.1",
-    "eslint-config-airbnb": "^3.0.0",
+    "eslint": "3.7.1",
+    "eslint-config-airbnb": "12.0.0",
+    "eslint-plugin-import": "1.16.0",
+    "eslint-plugin-jsx-a11y": "2.2.2",
+    "eslint-plugin-react": "6.3.0",
     "gulp": "^3.9.0",
     "gulp-cssnano": "^2.1.0",
-    "gulp-eslint": "^1.1.1",
-    "gulp-header": "^1.7.1",
-    "gulp-mocha-phantomjs": "^0.10.1",
+    "gulp-eslint": "^3.0.1",
+    "gulp-header": "^1.8.8",
+    "gulp-mocha-phantomjs": "^0.12.0",
     "gulp-rename": "^1.2.2",
     "gulp-strip-debug": "^1.1.0",
-    "gulp-uglify": "^1.5.1",
-    "mocha": "^2.3.4",
-    "sinon": "^1.17.2"
+    "gulp-uglify": "^2.0.0",
+    "mocha": "^3.1.0",
+    "sinon": "^1.17.6"
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "lint": "gulp lint",
+    "build": "gulp"
   },
   "license": "MIT"
 }
